# business-finder

./: .gitignore  .python-version  Dockerfile  Dockerfile.php.local  GEMINI.md  config.py  docker-compose-local.yml  docker-compose.yml  inspect_parquet.py  main.py  requirements.txt
docker/local/: supervisord.conf  xdebug.ini
docker/local/nginx/: default.conf
py_pipeline/: benchmark_models.py  merge_plans_ideas.py  phase1_5_partitioning.py  phase4_README.md  phase4_analytics.py  phase4_clusterer.py  phase4_clusterer_ingestor.py  phase4_clusterer_worker.py  phase4_distribute.md  phase4_worker.py  phase5_generation.py  phase6_business_plan.py  phase7_2_indexing.py  phase7_indexing.py
rust/minimal_polars_test/: Cargo.toml
rust/minimal_polars_test/src/: main.rs
rust/phase1_ingestor/: Cargo.toml  REFACTORING_SUMMARY.md  u00261
rust/phase1_ingestor/src/: checkpoint.rs  compaction.rs  constants.rs  lib.rs  main.rs  phase1.rs  phase2.rs  state.rs  types.rs  utils.rs
rust/phase2_consumer/: Cargo.toml
rust/phase2_consumer/src/: main.rs
rust/phase2_orchestrator/: Cargo.toml
rust/phase2_orchestrator/src/: main.rs
rust/phase2_writer/: Cargo.toml
rust/phase2_writer/src/: main.rs
rust/phase3_chains/: CHANGES.md  CHECKPOINT_IMPLEMENTATION.md  Cargo.toml  DISTRIBUTED.md  FLOW.md  README.md  build.sh  phase3.md
rust/phase3_chains/src/: constants.rs  coordinator.rs  discovery.rs  main.rs  processing.rs  protocol.rs  standalone.rs  worker.rs
rust/phase4_manager/: Cargo.toml
rust/phase4_manager/src/: main.rs
rust/phase4_worker/: Cargo.toml
rust/phase4_worker/src/: main.rs
scripts/: add_generated_plan_column.py  cleanup_corrupted_parquet.py  count_rows.py  export_model_onnx.py  export_onnx.py  migrate_redis.py  phase4_status.py
src/: api_server.py  benchmark_models.py  business_plan_generation.py  cleanup_databases.py  data_ingestion.py  dump_spark_csv.py  embedding_and_clustering.py  fileStreams.py  log_utils.py  phase1_ingestion.py  phase2_consumer.py  phase2_nlp.py  phase2_writer.py  read_cluster_texts.py  test_mps.py  test_parallel.py  test_qdrant_connection.py  utils.py
tests/: generate_test_data.py
web/: .gitignore  FEATURES.md  app.json  composer.json  package-lock.json  phpunit.xml
web/app/: _layout.tsx  index.tsx
web/app/Data/: BusinessPlanDao.php
web/app/Exports/: FinancialProjectionsExport.php
web/app/Livewire/: BusinessModelCanvasDisplay.php  BusinessPlanFeedback.php  BusinessPlanPage.php  BusinessPlanSearch.php  EditBusinessPlan.php  FinancialProjections.php  InAppNotifications.php  NotificationPreferences.php  PitchDeckDisplay.php  ProductListings.php  ProductPurchase.php  ProductReviews.php  ResourceList.php  SaveToCollectionModal.php  ScoringCriteriaManagement.php  SharedCollectionPage.php  TeamManagement.php  TeamWorkspace.php  UserCollections.php  UserDashboard.php
web/app/Models/: BusinessPlan.php  Collection.php  Comment.php  Feedback.php  Product.php  Profile.php  Resource.php  ScoringCriteria.php  Subscription.php  Team.php  User.php  WaitlistEntry.php  Widget.php
web/app/Notifications/: CompetitorNotification.php  DigestEmail.php  NewBusinessIdeaNotification.php  PersonalizedRecommendationNotification.php  SavedPlanUpdateNotification.php  TrendChangeNotification.php
web/app/Policies/: CollectionPolicy.php  CommentPolicy.php  ReviewPolicy.php  ScoringCriteriaPolicy.php  TeamPolicy.php  WidgetPolicy.php
web/app/Providers/: AppServiceProvider.php  ElasticsearchServiceProvider.php  RouteServiceProvider.php
web/app/Services/: BusinessModelCanvasGeneratorService.php  FinancialProjectionService.php  PaymentService.php  PitchDeckGeneratorService.php
web/app/plan/: [id].tsx
web/app/tabs/: _layout.tsx  feed.tsx  index.tsx
web/bootstrap/: app.php
web/components/: BusinessPlanCard.tsx  Comment.tsx
web/config/: app.php  mail.php  scout.php  services.php
web/config/forum/: frontend.php
web/database/factories/: BusinessPlanFactory.php
web/database/migrations/: 2025_10_08_050206_create_business_plans_table.php  2025_10_10_001340_create_business_plans_table.php  (+21 more)
web/public/: php.php
web/resources/css/: app.css
web/routes/: api.php  auth.php  web.php
web/services/: api.ts
web/types/: business_plan.ts
(+74 files in other folders)
