[package]
name = "phase2_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
ndarray = "0.15"
# Using ort for ONNX Runtime inference
ort = { version = "2.0.0-rc.4", features = ["ndarray", "download-binaries"] } 
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokenizers = { version = "0.15", features = ["onig"] }
