[package]
name = "phase2_writer"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.37.0", features = ["lazy", "parquet", "rows", "coalesce", "strings", "regex"] }
redis = { version = "0.25.0", features = ["json", "tls-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"