[package]
name = "phase3_chains"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.37.0", features = ["lazy", "parquet"] }
rayon = "1.10.0"
walkdir = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
indicatif = "0.17"
duckdb = { version = "1.1", features = ["bundled"] }
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.30"
