[package]
name = "phase4_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.37.0", features = ["lazy", "parquet"] }
redis = { version = "0.25.0", features = ["json", "tls-native-tls"] }
walkdir = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
indicatif = "0.17"
ctrlc = "3.4"
